CPP_CORE/include/creative_core_api.h

typedef void* CreativeProjectionHandle;
typedef void* CreativeNebulaWriterHandle;
typedef void* CreativeNebulaReaderHandle;
typedef void* CreativeAtlasReaderHandle;
typedef struct CsCompositeLayer {
    const uint8_t* pixels;
    int stride;
    int image_format;
    float opacity;
    int mode;
    int visible;
} CsCompositeLayer;
typedef struct CsAdvancedCompositeLayer {
    const uint8_t* pixels;
    int stride;
    float opacity;
    int mode;
    int visible;
    int clipping;
    float parameters[11];
} CsAdvancedCompositeLayer;
// Native Nebula file I/O. The UI supplies document metadata and one raw tile
// at a time; the C++ bridge owns the binary envelope, compression, CRC and
// atomic file commit.
CreativeNebulaWriterHandle cs_nebula_writer_create(
    const char* path, const uint8_t* metadata, uint32_t metadata_size,
    uint32_t chunk_count);
int cs_nebula_writer_add_tile(CreativeNebulaWriterHandle handle,
                              uint32_t chunk_id, const uint8_t* rgba,
                              uint64_t byte_count);
int cs_nebula_writer_finish(CreativeNebulaWriterHandle handle);
void cs_nebula_writer_cancel(CreativeNebulaWriterHandle handle);
CreativeNebulaReaderHandle cs_nebula_reader_open(const char* path);
uint32_t cs_nebula_reader_metadata_size(CreativeNebulaReaderHandle handle);
int cs_nebula_reader_copy_metadata(CreativeNebulaReaderHandle handle,
                                   uint8_t* output, uint32_t capacity);
uint32_t cs_nebula_reader_chunk_count(CreativeNebulaReaderHandle handle);
int cs_nebula_reader_next_tile(CreativeNebulaReaderHandle handle,
                               uint32_t* chunk_id, uint8_t* output,
                               uint64_t capacity, uint64_t* byte_count);
void cs_nebula_reader_close(CreativeNebulaReaderHandle handle);
// Validate document metadata plus tile ownership/grid/index consistency before
// image allocation. Also returns validated canvas dimensions and DPI.
int cs_nebula_validate_manifest(const uint8_t* metadata,
                                uint32_t metadata_size, uint32_t chunk_count,
                                int* width, int* height, int* dpi);
// Read-only import bridge for Atlas v2/v3 files. The reader keeps compressed
// layer data on disk and inflates one layer only when the UI requests it.
CreativeAtlasReaderHandle cs_atlas_reader_open(const char* path);
int cs_atlas_reader_document_info(CreativeAtlasReaderHandle handle,
                                  char* name, uint32_t name_capacity,
                                  char* author, uint32_t author_capacity,
                                  uint32_t* width, uint32_t* height,
                                  uint32_t* dpi, uint32_t* layer_count,
                                  char* background, uint32_t background_capacity);
int cs_atlas_reader_layer_info(CreativeAtlasReaderHandle handle,
                               uint32_t layer_index,
                               char* name, uint32_t name_capacity,
                               float* opacity, int* visible,
                               char* blend, uint32_t blend_capacity);
int cs_atlas_reader_copy_layer(CreativeAtlasReaderHandle handle,
                               uint32_t layer_index,
                               uint8_t* rgba, uint64_t rgba_capacity);
void cs_atlas_reader_close(CreativeAtlasReaderHandle handle);
typedef struct CsProjectionLayer {
    const uint8_t* rgba;
    int width;
    int height;
    int stride;
    int visible;
    float opacity;
    int blend_mode;
    // opacity, opposite_mix, intensity, gamma, mix_normal, pivot, clamp,
    // softness, hue_shift, saturation_boost, offset (in that order).
    float blend_parameters[11];
    int parameterized;
    int clipping;
} CsProjectionLayer;
typedef struct CsProjectionTile {
    uint64_t generation;
    int tile_x;
    int tile_y;
    int width;
    int height;
    const CsProjectionLayer* layers;
    int layer_count;
} CsProjectionTile;
typedef void (*CsProjectionCallback)(
    uint64_t generation, int tile_x, int tile_y,
    const uint8_t* rgba, int width, int height, int stride,
    const char* error, void* user_data);
CreativeProjectionHandle cs_projection_start(CsProjectionCallback callback, void* user_data);
void cs_projection_stop(CreativeProjectionHandle handle);
void cs_projection_set_callback(CreativeProjectionHandle handle,
                                CsProjectionCallback callback, void* user_data);
void cs_projection_set_threads(CreativeProjectionHandle handle, int thread_count);
int cs_projection_invalidate(
    CreativeProjectionHandle handle, uint64_t generation,
    int tile_x, int tile_y, int width, int height,
    const CsProjectionLayer* layers, int layer_count);
int cs_projection_invalidate_batch(
    CreativeProjectionHandle handle, const CsProjectionTile* tiles,
    int tile_count);
// Return a permutation mapping output stack indices to input indices.
// direction is +1 for move-up and -1 for move-down; returns 1 on a move.
int cs_layer_stack_move(const int* group_ids, int layer_count, int active_index,
                        int direction, int* output_order, int* active_after);
int cs_layer_stack_remove(int layer_count, int remove_index, int active_index,
                          int* output_order, int* active_after);
int cs_layer_stack_plan_visible_merge(const int* effective_visibility,
                                      int layer_count, int active_index,
                                      int* output_keep_mask, int* target_index,
                                      int* active_after);
int cs_layer_stack_plan_visible_merge_groups(
    const int* layer_visibility, const int* group_membership,
    const int* group_visibility, int layer_count, int group_count,
    int active_index, int* output_effective_visibility,
    int* output_keep_mask, int* target_index, int* active_after);
int cs_layer_property_update(int property, double current_value,
                             double requested_value, double* output_value);
int cs_layer_group_normalize(const int* requested_indices, int requested_count,
                             const int* grouped_layers, int layer_count,
                             int* output_indices, int output_capacity,
                             int* output_count);
int cs_layer_stack_plan_composite_runs(const int* group_ids, int layer_count,
                                       int* output_starts, int* output_ends,
                                       int* output_group_ids, int output_capacity,
                                       int* output_count);
int cs_layer_stack_plan_group_cleanup(const int* layer_group_ids,
                                      const int* keep_layers, int layer_count,
                                      int group_count, int* output_keep_groups,
                                      int* output_membership, int output_capacity);
int cs_document_validate_geometry(int width, int height, int dpi,
                                  int maximum_dimension, uint64_t maximum_pixels);
// Composite one raster layer onto an existing raster using Qt's exact blend
// mode semantics; mode follows the CreativeCore projection mode numbering.
int cs_composite_layer_in_place(uint8_t* target, const uint8_t* source,
                                int width, int height, int target_stride,
                                int source_stride, int target_format,
                                int source_format, float opacity, int mode);
int cs_composite_layers(uint8_t* target, int width, int height,
                        int target_stride, int target_format,
                        const CsCompositeLayer* layers, int layer_count);
int cs_composite_layers_advanced(uint8_t* target, int width, int height,
                                 int target_stride,
                                 const CsAdvancedCompositeLayer* layers,
                                 int layer_count);