CORE/native_bridge.py


def _configure_document_codecs(library) -> None:
    """Configure Nebula serialization and read-only Atlas import ABI."""
    handle = ctypes.c_void_p
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    library.cs_nebula_writer_create.argtypes = [
        ctypes.c_char_p, byte_ptr, ctypes.c_uint32, ctypes.c_uint32,
    ]
    library.cs_nebula_writer_create.restype = handle
    library.cs_nebula_writer_add_tile.argtypes = [
        handle, ctypes.c_uint32, byte_ptr, ctypes.c_uint64,
    ]
    library.cs_nebula_writer_add_tile.restype = ctypes.c_int
    library.cs_nebula_writer_finish.argtypes = [handle]
    library.cs_nebula_writer_finish.restype = ctypes.c_int
    library.cs_nebula_writer_cancel.argtypes = [handle]
    library.cs_nebula_writer_cancel.restype = None
    library.cs_nebula_reader_open.argtypes = [ctypes.c_char_p]
    library.cs_nebula_reader_open.restype = handle
    library.cs_nebula_reader_metadata_size.argtypes = [handle]
    library.cs_nebula_reader_metadata_size.restype = ctypes.c_uint32
    library.cs_nebula_reader_copy_metadata.argtypes = [
        handle, byte_ptr, ctypes.c_uint32,
    ]
    library.cs_nebula_reader_copy_metadata.restype = ctypes.c_int
    library.cs_nebula_reader_chunk_count.argtypes = [handle]
    library.cs_nebula_reader_chunk_count.restype = ctypes.c_uint32
    library.cs_nebula_reader_next_tile.argtypes = [
        handle, ctypes.POINTER(ctypes.c_uint32), byte_ptr, ctypes.c_uint64,
        ctypes.POINTER(ctypes.c_uint64),
    ]
    library.cs_nebula_reader_next_tile.restype = ctypes.c_int
    library.cs_nebula_reader_close.argtypes = [handle]
    library.cs_nebula_reader_close.restype = None
    library.cs_nebula_validate_manifest.argtypes = [byte_ptr,
        ctypes.c_uint32, ctypes.c_uint32, ctypes.POINTER(ctypes.c_int),
        ctypes.POINTER(ctypes.c_int), ctypes.POINTER(ctypes.c_int)]
    library.cs_nebula_validate_manifest.restype = ctypes.c_int

    u32_ptr = ctypes.POINTER(ctypes.c_uint32)
    library.cs_atlas_reader_open.argtypes = [ctypes.c_char_p]
    library.cs_atlas_reader_open.restype = handle
    library.cs_atlas_reader_document_info.argtypes = [
        handle, ctypes.c_char_p, ctypes.c_uint32,
        ctypes.c_char_p, ctypes.c_uint32,
        u32_ptr, u32_ptr, u32_ptr, u32_ptr,
        ctypes.c_char_p, ctypes.c_uint32,
    ]
    library.cs_atlas_reader_document_info.restype = ctypes.c_int
    library.cs_atlas_reader_layer_info.argtypes = [
        handle, ctypes.c_uint32, ctypes.c_char_p, ctypes.c_uint32,
        ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_int),
        ctypes.c_char_p, ctypes.c_uint32,
    ]
    library.cs_atlas_reader_layer_info.restype = ctypes.c_int
    library.cs_atlas_reader_copy_layer.argtypes = [
        handle, ctypes.c_uint32, byte_ptr, ctypes.c_uint64,
    ]
    library.cs_atlas_reader_copy_layer.restype = ctypes.c_int
    library.cs_atlas_reader_close.argtypes = [handle]
    library.cs_atlas_reader_close.restype = None


def _configure_layer_stack(library) -> None:
    int_ptr = ctypes.POINTER(ctypes.c_int)
    library.cs_layer_stack_move.argtypes = [
        int_ptr, ctypes.c_int, ctypes.c_int, ctypes.c_int,
        int_ptr, int_ptr,
    ]
    library.cs_layer_stack_move.restype = ctypes.c_int
    property_function = getattr(library, "cs_layer_property_update", None)
    if property_function is not None:
        property_function.argtypes = [ctypes.c_int, ctypes.c_double,
                                      ctypes.c_double, ctypes.POINTER(ctypes.c_double)]
        property_function.restype = ctypes.c_int
    remove_function = getattr(library, "cs_layer_stack_remove", None)
    if remove_function is not None:
        remove_function.argtypes = [
            ctypes.c_int, ctypes.c_int, ctypes.c_int, int_ptr, int_ptr,
        ]
        remove_function.restype = ctypes.c_int
    visible_merge_function = getattr(library, "cs_layer_stack_plan_visible_merge", None)
    if visible_merge_function is not None:
        visible_merge_function.argtypes = [int_ptr, ctypes.c_int, ctypes.c_int,
                                           int_ptr, int_ptr, int_ptr]
        visible_merge_function.restype = ctypes.c_int
    visible_group_merge_function = getattr(
        library, "cs_layer_stack_plan_visible_merge_groups", None)
    if visible_group_merge_function is not None:
        visible_group_merge_function.argtypes = [int_ptr, int_ptr, int_ptr,
            ctypes.c_int, ctypes.c_int, ctypes.c_int, int_ptr, int_ptr, int_ptr, int_ptr]
        visible_group_merge_function.restype = ctypes.c_int
    group_function = getattr(library, "cs_layer_group_normalize", None)
    if group_function is not None:
        group_function.argtypes = [int_ptr, ctypes.c_int, int_ptr, ctypes.c_int,
                                   int_ptr, ctypes.c_int, int_ptr]
        group_function.restype = ctypes.c_int
    composite_runs_function = getattr(library, "cs_layer_stack_plan_composite_runs", None)
    if composite_runs_function is not None:
        composite_runs_function.argtypes = [int_ptr, ctypes.c_int, int_ptr, int_ptr,
                                            int_ptr, ctypes.c_int, int_ptr]
        composite_runs_function.restype = ctypes.c_int
    cleanup_function = getattr(library, "cs_layer_stack_plan_group_cleanup", None)
    if cleanup_function is not None:
        cleanup_function.argtypes = [int_ptr, int_ptr, ctypes.c_int, ctypes.c_int,
                                     int_ptr, int_ptr, ctypes.c_int]
        cleanup_function.restype = ctypes.c_int
    geometry_function = getattr(library, "cs_document_validate_geometry", None)
    if geometry_function is not None:
        geometry_function.argtypes = [ctypes.c_int, ctypes.c_int, ctypes.c_int,
                                      ctypes.c_int, ctypes.c_uint64]
        geometry_function.restype = ctypes.c_int


def configure_projection_api(library, native_layer_type, native_tile_type):
    """Declare the callback-driven projection ABI in the shared bridge."""
    callback_type = ctypes.CFUNCTYPE(
        None, ctypes.c_uint64, ctypes.c_int, ctypes.c_int,
        ctypes.POINTER(ctypes.c_uint8), ctypes.c_int, ctypes.c_int,
        ctypes.c_int, ctypes.c_char_p, ctypes.c_void_p,
    )
    handle = ctypes.c_void_p
    library.cs_projection_start.argtypes = [callback_type, ctypes.c_void_p]
    library.cs_projection_start.restype = handle
    library.cs_projection_stop.argtypes = [handle]
    library.cs_projection_stop.restype = None
    library.cs_projection_set_callback.argtypes = [handle, callback_type, ctypes.c_void_p]
    library.cs_projection_set_callback.restype = None
    library.cs_projection_set_threads.argtypes = [handle, ctypes.c_int]
    library.cs_projection_set_threads.restype = None
    library.cs_projection_invalidate.argtypes = [
        handle, ctypes.c_uint64, ctypes.c_int, ctypes.c_int,
        ctypes.c_int, ctypes.c_int, ctypes.POINTER(native_layer_type), ctypes.c_int,
    ]
    library.cs_projection_invalidate.restype = ctypes.c_int
    batch_function = getattr(library, "cs_projection_invalidate_batch", None)
    if batch_function is not None:
        batch_function.argtypes = [handle, ctypes.POINTER(native_tile_type), ctypes.c_int]
        batch_function.restype = ctypes.c_int
    return callback_type, batch_function


_BLEND_MODE_IDS = {
    "normal": 0, "darken": 1, "multiply": 2, "color_burn": 3,
    "lighten": 4, "screen": 5, "color_dodge": 6, "overlay": 7,
    "soft_light": 8, "hard_light": 9, "difference": 10, "exclusion": 11,
}
_PARAMETER_MODE_IDS = {**_BLEND_MODE_IDS, "hue": 12, "saturation": 13,
                       "color": 14, "luminosity": 15}
_PARAMETER_KEYS = ("opacity", "opposite_mix", "intensity", "gamma", "mix_normal",
                   "pivot", "clamp", "softness", "hue_shift",
                   "saturation_boost", "offset")
_PARAMETER_DEFAULTS = (1.0, 0.0, 1.0, 1.0, 0.0, 0.5, 1.0, 0.5, 0.0, 1.0, 0.0)


def _configure_layer_composite(library) -> None:
    byte_ptr = ctypes.POINTER(ctypes.c_uint8)
    class CompositeLayer(ctypes.Structure):
        _fields_ = [("pixels", byte_ptr), ("stride", ctypes.c_int),
                    ("image_format", ctypes.c_int), ("opacity", ctypes.c_float),
                    ("mode", ctypes.c_int), ("visible", ctypes.c_int)]
    library._cs_composite_layer_type = CompositeLayer
    class AdvancedCompositeLayer(ctypes.Structure):
        _fields_ = [("pixels", byte_ptr), ("stride", ctypes.c_int),
                    ("opacity", ctypes.c_float), ("mode", ctypes.c_int),
                    ("visible", ctypes.c_int), ("clipping", ctypes.c_int),
                    ("parameters", ctypes.c_float * 11)]
    library._cs_advanced_composite_layer_type = AdvancedCompositeLayer
    library.cs_composite_layers_advanced.argtypes = [byte_ptr, ctypes.c_int,
        ctypes.c_int, ctypes.c_int, ctypes.POINTER(AdvancedCompositeLayer), ctypes.c_int]
    library.cs_composite_layers_advanced.restype = ctypes.c_int
    library.cs_composite_layers.argtypes = [byte_ptr, ctypes.c_int, ctypes.c_int,
        ctypes.c_int, ctypes.c_int, ctypes.POINTER(CompositeLayer), ctypes.c_int]
    library.cs_composite_layers.restype = ctypes.c_int
    library.cs_composite_layer_in_place.argtypes = [
        byte_ptr, byte_ptr, *([ctypes.c_int] * 6), ctypes.c_float, ctypes.c_int,
    ]
    library.cs_composite_layer_in_place.restype = ctypes.c_int


def composite_layers_native(width: int, height: int, layers):
    """Composite standard blend layers in one native call; None means unsupported."""
    from PySide6.QtGui import QImage

    library = load_creative_core()
    if library is None or width <= 0 or height <= 0:
        return None
    entries = []
    keepalive = []
    for layer in layers:
        if not layer.visible:
            entries.append((None, 0, 0, 0.0, 0, 0))
            continue
        image = layer.image
        if image.isNull() or image.width() != width or image.height() != height:
            return None
        mode = _BLEND_MODE_IDS.get(str(getattr(layer, "blend_mode", "normal")).lower())
        if mode is None:
            return None
        if image.format() not in (QImage.Format.Format_ARGB32, QImage.Format.Format_RGBA8888):
            image = image.convertToFormat(QImage.Format.Format_ARGB32)
        if image.isNull():
            return None
        keepalive.append(image)
        entries.append((qimage_pointer(image), image.bytesPerLine(), image.format().value,
                        float(layer.opacity), mode, 1))
    composite_type = library._cs_composite_layer_type
    native_layers = (composite_type * len(entries))(*[
        composite_type(pointer, stride, image_format, opacity, mode, visible)
        for pointer, stride, image_format, opacity, mode, visible in entries
    ])
    output = QImage(width, height, QImage.Format.Format_ARGB32)
    if not library.cs_composite_layers(qimage_pointer(output), width, height,
            output.bytesPerLine(), output.format().value, native_layers, len(entries)):
        return None
    return output


def composite_layers_advanced(width: int, height: int, layers):
    """Composite parameterized and clipped layers in one CreativeCore call."""
    from PySide6.QtGui import QImage
